Washing machine created